@@ -40,6 +40,7 @@ void JSStaticScopeObject::visitChildren(JSCell* cell, SlotVisitor& visitor)
     ASSERT_GC_OBJECT_INHERITS(thisObject, &s_info);
     COMPILE_ASSERT(StructureFlags & OverridesVisitChildren, OverridesVisitChildrenWithoutSettingFlag);
     ASSERT(thisObject->structure()->typeInfo().overridesVisitChildren());
+
     JSVariableObject::visitChildren(thisObject, visitor);
     visitor.append(&thisObject->m_registerStore);
 }
