@@ -32,13 +32,10 @@ namespace JSC {
 
 void RegExpCachedResult::visitChildren(SlotVisitor& visitor)
 {
-    if (m_result) {
-        visitor.append(&m_lastInput);
-        visitor.append(&m_lastRegExp);
-    } else {
-        visitor.append(&m_reifiedInput);
-        visitor.append(&m_reifiedResult);
-    }
+    visitor.append(&m_lastInput);
+    visitor.append(&m_lastRegExp);
+    visitor.append(&m_reifiedInput);
+    visitor.append(&m_reifiedResult);
 }
 
 RegExpMatchesArray* RegExpCachedResult::lastResult(ExecState* exec, JSObject* owner)
